--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,6 @@ jobs:
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               git push heroku master
-              heroku run python manage.py deploy
+              heroku run python manage.py deploy --app circleci-test-tokada
               heroku restart
             fi
